# anno1800-scripting-api

./: .gitignore  Anno1800ScriptingAPI.sln  AutoComms.cs  LICENSE  LICENSE_NOTICE.md  README.md  SECURITY.md  TheBigHeist.sln  autocomms.cpp  autocomms.h  autocomms.py  autocomms.sublime-project  autocomms_native.h  comms.yaml  commsgen.py  enums.yaml  rda-generator.py
.github/: bug_report.md
AutoCommsGen/: Cargo.toml
CodeGenerator/: CodeGenerator.cs  CodeGenerator.csproj  Functions.cs  Program.cs  Type.cs  YamlData.cs
CommsCPP/: CommsCPP.vcxproj  CommsCPP.vcxproj.filters
CommsCS/: Comms.cs  CommsCS.csproj  Types.gen.cs
Frida/: sample.py
GoodMinMax/: Program.cs
Injected/: Injected.vcxproj  Injected.vcxproj.filters  Zydis.h  anno_entity.cpp  anno_entity.h  anno_native.cpp  anno_native.h  anno_tools.cpp  anno_tools.h  dllmain.cpp  global_includes.h  hardware_breakpoints.h  hook.cpp  hook.h  injected.cpp  injected.h  log.cpp  log.h  memory.cpp  memory.h  remote_call_handler_anno.cpp  remote_call_handler_anno.h  remote_call_handler_base.gen.cpp  remote_call_handler_base.gen.h  remote_call_handler_test.cpp  remote_call_handler_test.h  serialization.gen.cpp  serialization.gen.h  socket.cpp  socket.h  structs.gen.h  test_asm.asm  testing.cpp  testing.h  tools.cpp  tools.h  trampolines.asm  ui.cpp  ui.h  ui_area_view.cpp  (+13 more)
Monocle/: Injection.cs  Main.cs  Monocle.csproj  Serialization.gen.cs  Structs.gen.cs  Telegraph.cs  Telegraph.gen.cs
ProductionViewer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProductionViewer.csproj
Q/: BytePattern.cpp  (+16 more)
(+51 files in other folders)
