[package]
name = "auto-comms-gen"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
microprofile = "0.0.2"
rand = "0.6.5"

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

